# sbi

./: .gitignore  AGENTS.md  PYTORCH_SETUP.md  README.md  base_test.py  based_catwise.py  based_posterior.py  based_simulations.py  colour_err_sampling.py  dipole_test.py  example.ipynb  funcs.py  inference.py  load_posterior.py  make_paper_plots.sh  maps.py  prepare_catwise.py  priors.py  pyproject.toml  requirements.txt  run_posterior_plots.sh  setup_pytorch.sh  spherical.py  utils.py  validate_error_map.py
catwise/: maps.py  utils.py
dipolesbi/: error_sampling_gp.py
dipolesbi/catwise/: CatWISE_Mask_nside64.npy  RSR-W1.txt  alpha_colors.fits  alpha_w12_only.fits  catwise_S22.npy  maps.py  utils.py
dipolesbi/lib/: allsky_hadamard.py  getdist_llm.md  torch_hp_cnn.py
dipolesbi/scripts/: base_test.py  based_catwise.py  based_catwise_posterior.py  based_posterior.py  based_racs_low3.py  based_simulations.py  bijectors.py  blackjax_test.py  catwise_alpha.py  catwise_ns.py  change_catwise_mask_fill.py  coverage_error_heatmap.py  dipole_test.py  error_sampling_gp.py  evidence_acc.py  evidence_comparison.py  example.ipynb  fiducial_corners.py  fix_catwise_posterior.py  fix_catwise_prior.py  geraint_plots.py  hadamard_transform.py  healpix_transform1.py  healpix_transform2.py  integer_flow_test.py  lnB_exp.py  lnB_scatter.py  load_posterior.py  masked_flow.py  output_test.py  paper_covmap.py  posterior_predictive.py  prepare_catwise.py  quick_dipole.py  racs_low3_posterior_predictive.py  recompute_true_round_post.py  run_multiround.py  simple_dipole_mwe.py  surjection.py  transform_test.py  (+3 more)
dipolesbi/style/: __init__.py  paperplot.py
dipolesbi/tests/: bijectors_unit.py  catwise_sim_unit.py  dipole_theta_transform_unit.py  galactic_icrs_jax_unit.py  haar_transform.py  haar_transform_unit.py  healpix_conv_integration.py  healpix_conv_unit.py  healpix_helpers_unit.py  np_rngkey_unit.py  priors_np_unit.py  pytree_adapter_unit.py  simple_dipole_map_jax_unit.py  simple_dipole_map_unit.py  zscore_transform_unit.py
dipolesbi/tools/: __init__.py  bijectors.py  cli_capture.py  configs.py  coordinates.py  custom.py  dataloader.py  distributions.py  embedding_nets.py  hadamard_transform.py  healpix_helpers.py  (+27 more)
exp_scripts/: catsim_mem_profile.sh  evidence_acc.sh  multiround_inferer.sh  run_based_catwise.sh  run_lnB_exp.sh
tools/: base_test.py  constants.py  inference.py  maps.py  models.py  noise_models.py  physics.py  points.py  utils.py
(+39 files in other folders)
