[project]
name = "dipolesbi"
version = "0.1.0"
description = ""
authors = [
    {name = "Oliver Oayda",email = "oaydaoliver@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "healpy (>=1.18.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
