[project]
name = "dipolesbi"
version = "0.1.0"
description = "Fit dipoles using simulation-based inference."
authors = [
    {name = "Oliver Oayda",email = "oaydaoliver@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "healpy (>=1.18.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "dill (>=0.4.0,<0.5.0)",
    "astropy (>=7.0.2,<8.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "corner (>=2.2.3,<3.0.0)",
    "dynesty (>=2.1.5,<3.0.0)",
    "emcee (>=3.1.6,<4.0.0)",
    "pymc (>=5.25.1,<6.0.0)", # get around this issue: AttributeError: module 'numpy.__config__' has no attribute 'get_info'
    "memory-profiler (>=0.61.0,<0.62.0)",
    "harmonic (>=1.3.0,<2.0.0)",
    "jax (<0.7.0)",
    "jaxlib (<0.7.0)",
    "ultranest (>=4.4.0,<5.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "surjectors @ git+https://github.com/o-oayda/surjectors.git@main",
    "blackjax @ git+https://github.com/handley-lab/blackjax@nested_sampling",
    "anesthetic (<= 2.10.3)",
    "catsim @ git+https://github.com/o-oayda/catsim.git",
    "pytest (>=9.0.1,<10.0.0)"
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12] (<0.7.0)",
    "jaxlib (<0.7.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
